[tool.poetry]
name = "m3-h1"
version = "0.1.0"
description = "Data science homework 1"
authors = ["Dmytro Filin <dmitriy.fillin@gmail.com>"]
license = "IMT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pandas = "^2.1.3"
jupyter = "^1.0.0"
tqdm = "^4.66.1"
matplotlib = "^3.8.2"
scikit-learn = "^1.3.2"
manim = "^0.18.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
